# handwritten-text-recognition

./: pyproject.toml
src/: tutorial.ipynb
src/htrflor/: __init__.py  main.py
src/htrflor/data/: generator.py
src/htrflor/network/: layers.py  model.py
src/network/: layers.py  model.py
