[project]
name = "handwritten-text-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arthur Flor", email = "arthurflor23@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "editdistance",
    "kaldiio",
    "opencv-python",
    "symspellpy",
    "tensorflow",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/data",
    "src/network",
    "src/language",
    "src/main.py",
]
